// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when validating interchange element has duplicate names should have validation failures 1`] = `"Interchange InterchangeName redeclares element DomainEntityElementName."`;

exports[`when validating interchange element has duplicate names should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 3,
  "tokenText": "DomainEntityElementName",
}
`;

exports[`when validating interchange element has multiple duplicate names should have validation failures 1`] = `"Interchange InterchangeName redeclares element DomainEntityElementName1."`;

exports[`when validating interchange element has multiple duplicate names should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 3,
  "tokenText": "DomainEntityElementName1",
}
`;

exports[`when validating interchange element has multiple duplicate names should have validation failures 3`] = `"Interchange InterchangeName redeclares element DomainEntityElementName2."`;

exports[`when validating interchange element has multiple duplicate names should have validation failures 4`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityElementName2",
}
`;
